Add Arabic fields for menus and pages
